# rust_airport_name_checker

./: Cargo.toml  README.md
src/: main.rs  uk_airport_coords.csv
src/calculations/: euclidean_distance.rs  mod.rs  utils.rs
src/coordinates/: coords.rs  csv_coords.rs  mod.rs
