[package]
name = "airport_name_finder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
polars = { version = "0.23.2", default-features = true, features = ["temporal", "dtype-categorical", "polars-io", "lazy", "private", "arg_where"] }

